--- a/css/Reset.css
+++ b/css/Reset.css
@@ -1,60 +1,19 @@
-﻿@charset "utf-8";
-html, body {
-	height: 100%;
-	width: 100%;
-	overflow-x: hidden;
-}
-body{
-	
-	height: auto;
-}
+html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}
+html,body,div,span,iframe,h1,h2,h3,h4,h5,h6,p,a,dl,dt,dd,ol,ul,li,form,label,table,tbody,tfoot,thead,tr,th,
+td{margin:0;padding:0;border:0;font:inherit;font-size:100%;vertical-align:baseline}
+ol,ul{list-style:none}
+table{border-collapse:collapse;border-spacing:0}
+article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}
+a{cursor:pointer;background:transparent;text-decoration:none;-webkit-tap-highlight-color:rgba(255,255,255,0)}
+a:active,a:hover{outline:0}
+b,strong{font-weight:bold}
+img{border:0;vertical-align:top}
+svg:not(:root){overflow:hidden}
+button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}
+textarea{overflow:auto;resize:none}
+.clear{*zoom:1}
+.clear:after{content:"";clear:both;display:block}
+.fl{float:left}
+.fr{float:right}
 /*移动端*/
-* {
-	box-sizing: border-box;
-}
-body {
-	background: #FFF;
-}
-body, h1, h2, h3, h4, h5, h6, p, ul, ol, pre, dl, dd, th, td, form, input, select, textarea, div, output, section, a, ul, li {
-	padding: 0;
-	margin: 0;
-	zoom: 1;
-}
-textarea {
-	overflow: auto;
-	resize: none
-}
-table {
-	border-collapse: collapse;
-}
-img {
-	border: none;
-	vertical-align: top;
-	box-sizing: border-box;
-}
-em {
-	font-style: normal
-}
-a {
-	text-decoration: none;
-	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-}
-li {
-	list-style: none;
-}
-.clear {
-	zoom: 1
-}
-.clear:after {
-	content: "";
-	clear: both;
-	display: block
-}
-.fl {
-	float: left
-}
-.fr {
-	float: right
-}
-
-
+*{box-sizing:border-box;}
